--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
@@ -9,8 +9,8 @@
     <div class="Container100 TextAlCenter">
         <div class="Container50 Responsive100 Fleft">
 
-			<h3 class="StepsQuestionsFS StepsQuestionsFSpg3">Please select
-				an objective from the five choices below that best matches your
+			<h3 class="StepsQuestionsFS StepsQuestionsFSpg3"><b>Please select
+				an objective</b> from the five choices below that best matches your
 				goals for this investment.</h3>
             <div class="Container100">
                 <div class="Container25 Responsive0" style="height:1px;"></div>
@@ -56,12 +56,11 @@
                          <h:outputText value="Next" />
                          </p:commandLink>
                          </div>
-        <div class="Container50 Responsive100">
+        <div class="Container50 Responsive100"><p class="AbvportfolioCreation"><i class="fa fa-caret-right" aria-hidden="true"></i> The initial recommended strategy displayed is
+            based solely on time frame but will be refined as we gather more
+            information about your goals and risk tolerance.</p>
             <ui:include src="/pages/consumer/tcm/cadd/rightPanel.xhtml"/>
-			<div class="EmptyBox5"></div>
-			<p class="AbvportfolioCreation"><i class="fa fa-caret-right" aria-hidden="true"></i> The initial recommended strategy displayed is
-			based solely on time frame but will be refined as we gather more
-			information about your goals and risk tolerance.</p>
+
         </div>
 
     </div>
