--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -9,15 +9,12 @@
             <h3 class="TexAlCenter StepsQuestionsFS">
                 The chart below shows the expected average return (white
  number) and the expected range of gains (green) or losses (gray) for five
-hypothetical portfolios over a one year period.
-Select the choice that best matches your comfort zone.
+hypothetical portfolios over a one year period.<br/>
+                <b>Select the risk level that best matches your comfort zone</b>
             </h3>
 
             <h:inputHidden value="#{tcmpb.riskCalculator.ans4}"/>
-            <div class="EmptyBox10"></div>
-            <div class="TexAlCenter">
-                <strong>Select one of the risk levels shown below</strong>
-            </div>
+
             <div class="EmptyBox20"></div>
             <div class="Container100 TexAlCenter">
 
@@ -93,10 +90,8 @@ Select the choice that best matches your comfort zone.
 
         </div>
         <div class="Container50 Responsive100 Fleft">
+            <p class="AbvportfolioCreation"><i class="fa fa-caret-right" aria-hidden="true"></i> Please note your preliminary recommended strategy changes with your selections.</p>
             <ui:include src="/pages/consumer/tcm/cadd/rightPanel.xhtml"/>
-       <div class="EmptyBox5"></div>
-        <p class="AbvportfolioCreation"><i class="fa fa-caret-right" aria-hidden="true"></i> Please note your preliminary recommended strategy changes with your selections.</p>
-
         </div>
 
     </div>
