--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -10,7 +10,11 @@
 		<f:event type="preRenderView" listener="#{ctobean.preRenderView}" />
 	</f:metadata>
 
-
+<script type="text/javascript">
+	function tooltipCustomDisplayNone() {
+			$('.ui-tooltip').fadeOut();
+	}
+</script>
 	<p:panel id="beneficiaryPanel"
 			 style="border: 0px; background: transparent" closable="true"
 			 toggleable="true">
@@ -62,11 +66,11 @@
                                 <p:commandButton id="menuDelete"
                                                  styleClass="Fs16 RedButton"
                                                  process="@this" immediate="true"
-                                                 icon="fa fa-trash Fs14 white"
+                                                 icon="fa fa-trash Fs14 white" onclick="setTimeout(tooltipCustomDisplayNone, 10);"
 												 ajax="true"  update=":ctoForm:tdaccordian:beneficiaryPanel"
                                                  actionListener="#{tdcto.tdMasterData.deleteBeneficiary(benefiaciary)}">
                                     <p:tooltip  for="menuDelete"
-                                               value="Delete" />
+												value="Delete" />
                                     <f:setPropertyActionListener value="#{benefiaciary}"
                                                                  target="#{tdcto.tdMasterData.selectedBeneficiary}"/>
                                 </p:commandButton>
