Checked in 01/18/2017 (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
@@ -56,7 +56,7 @@
                          <h:outputText value="Next" />
                          </p:commandLink>
                          </div>
-        <div class="Container50 Responsive100"><p class="AbvportfolioCreation"><i class="fa fa-caret-right" aria-hidden="true"></i> The initial recommended strategy displayed is
+        <div class="Container50 Responsive100"><p class="AbvportfolioCreation">The initial recommended strategy displayed is
             based solely on time frame but will be refined as we gather more
             information about your goals and risk tolerance.</p>
             <ui:include src="/pages/consumer/tcm/cadd/rightPanel.xhtml"/>
