--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -10,7 +10,7 @@
                 The chart below shows the expected average return (white
  number) and the expected range of gains (green) or losses (gray) for five
 hypothetical portfolios over a one year period.<br/>
-                <b>Select the risk level that best matches your comfort zone</b>
+                <b>Select the risk level that best matches your comfort zone.</b>
             </h3>
 
             <h:inputHidden value="#{tcmpb.riskCalculator.ans4}"/>
@@ -90,7 +90,7 @@ hypothetical portfolios over a one year period.<br/>
 
         </div>
         <div class="Container50 Responsive100 Fleft">
-            <p class="AbvportfolioCreation"><i class="fa fa-caret-right" aria-hidden="true"></i> Please note your preliminary recommended strategy changes with your selections.</p>
+            <p class="AbvportfolioCreation">Please note your preliminary recommended strategy changes with your selections.</p>
             <ui:include src="/pages/consumer/tcm/cadd/rightPanel.xhtml"/>
         </div>
 
