--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
@@ -177,7 +177,7 @@
             This simulation shows a range of possible outcomes of <b>hypothetical portfolios</b>
             over your selected time horizon. You can see projected outcomes of five hypothetical
             portfolios by selecting differing risk levels. <b>Please select a hypothetical portfolio
-            that matches your risk tolerance over time</b>
+            that matches your risk tolerance over time.</b>
 
         </h3>
 
