--- a/Invessence/modules/web/src/main/webapp/pages/advisor/pendingAdv.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/pendingAdv.xhtml
@@ -69,7 +69,7 @@
                                 <p:panel rendered="#{manageAdvisorBean.getErrorMessage() != null}"
                                          style="border: 0px; background: transparent"
                                          styleClass="Container100">
-                                    * <h:outputText styleClass="errorText"
+                                    <h:outputText styleClass="errorText"
                                                   value="#{manageAdvisorBean.getErrorMessage()}" escape="false"/>
                                 </p:panel>
                             </f:facet>
