Checked in 01/19/2017 (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final.xhtml
@@ -10,7 +10,7 @@
         <p:fieldset legend="Summary" toggleable="true" toggleSpeed="500">
             <div class="Container100 Responsive100">
                 <div class="Container50 Responsive50 Fleft">
-                    <div class="Container100 Fleft TexAlCenter">
+                    <div class="Container100 Fleft TexAlCenter" style="padding: 0px 20px;box-sizing: border-box;">
                         Based on the responses that you have given, we have selected the
                         <strong>#{tcmpb.fixedModelName}</strong> strategy for you.
                     </div>
